[tool.poetry]
name = "pythonfunctionmonitor"
version = "0.1.0"
description = ""
authors = ["chihwei"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
pytest = "^7.4.3"
loguru = "^0.7.2"
psutil = "^5.9.7"
prometheus-client = "^0.19.0"
sh = "^2.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
